--- a/package.json
+++ b/package.json
@@ -55,14 +55,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.17.3",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.1",
-    "sinon": "^2.4.1",
-    "sinon-mongoose": "^1.3.0",
-    "supertest": "^3.4.2"
+    "nodemon": "^1.19.1"
   },
   "engines": {
     "node": ">=8.16.0",
